// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkAsReadIcon renders correctly for announcement 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="flag-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for article-comment-at-mention 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="mention-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for article-comment-reply 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="reply-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for article-comment-reply-at-mention 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="mention-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for discussion-reply 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="comment-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for message-wall-post 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="comment-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for message-wall-thread 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="comment-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for other types 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="heart-small"
    small={false}
    tiny={false}
  />
</div>
`;

exports[`MarkAsReadIcon renders correctly for talk-page-message 1`] = `
<div
  className="wds-notification-card__icon-wrapper"
  role="presentation"
>
  <Icon
    className=""
    name="bubble-small"
    small={false}
    tiny={false}
  />
</div>
`;
